--- a/source/assets/css/base/_grid-settings.scss
+++ b/source/assets/css/base/_grid-settings.scss
@@ -1,1 +1,11 @@
 @include border-box-sizing;
+
+$break-phone: 600px;
+$break-tablet: 800px;
+$break-desktop-small: 1024px;
+$break-desktop: 1210px;
+
+$phone: 570px;
+$tablet: 768px;
+$desktop-small: 970px;
+$desktop: 1170px;
