--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -32,6 +32,9 @@
 		:javascript
 			window.jQuery || document.write('<script src="//javascripts/libs/jquery-1.10.2.min.js"><\/script>')
 
+		%script{:src => "http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"}
+		%script{:src => "http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/additional-methods.min.js"}
+
 		= javascript_include_tag "plugins", "script"
 
 		-# Google Analytics: change UA-XXXXX-X to be your site's ID.
